@@ -3,6 +3,7 @@ Please view this file on the master branch, on stable branches it's out of date.
 v 8.11.0 (unreleased)
   - Fix of 'Commits being passed to custom hooks are already reachable when using the UI'
   - Limit git rev-list output count to one in forced push check
+  - Add green outline to New Branch button !5447 (winniehell)
   - Retrieve rendered HTML from cache in one request
   - Load project invited groups and members eagerly in ProjectTeam#fetch_members
 
